; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/pressure/extr_st_pressure_core.c_st_press_common_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/pressure/extr_st_pressure_core.c_st_press_common_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.st_sensor_data = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @st_press_common_remove(%struct.iio_dev* %0) #0 {
  %2 = alloca %struct.iio_dev*, align 8
  %3 = alloca %struct.st_sensor_data*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %2, align 8
  %4 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %5 = call %struct.st_sensor_data* @iio_priv(%struct.iio_dev* %4)
  store %struct.st_sensor_data* %5, %struct.st_sensor_data** %3, align 8
  %6 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %7 = call i32 @st_sensors_power_disable(%struct.iio_dev* %6)
  %8 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %9 = call i32 @iio_device_unregister(%struct.iio_dev* %8)
  %10 = load %struct.st_sensor_data*, %struct.st_sensor_data** %3, align 8
  %11 = getelementptr inbounds %struct.st_sensor_data, %struct.st_sensor_data* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %16 = call i32 @st_sensors_deallocate_trigger(%struct.iio_dev* %15)
  br label %17

17:                                               ; preds = %14, %1
  %18 = load %struct.iio_dev*, %struct.iio_dev** %2, align 8
  %19 = call i32 @st_press_deallocate_ring(%struct.iio_dev* %18)
  ret void
}

declare dso_local %struct.st_sensor_data* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @st_sensors_power_disable(%struct.iio_dev*) #1

declare dso_local i32 @iio_device_unregister(%struct.iio_dev*) #1

declare dso_local i32 @st_sensors_deallocate_trigger(%struct.iio_dev*) #1

declare dso_local i32 @st_press_deallocate_ring(%struct.iio_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
